ToontownInfiniteRetro/logs/tti-retro-200529_143539.log
ToontownStart: Polling for game2 to finish...
ToontownStart: Game2 is finished.
ToontownStart: Starting the game.
ToontownStart: setting default font
TTLocalizer: Running in language: english
from toontown.toonbase.TTLocalizerEnglish import *
OTPLocalizer: Running in language: english
from otp.otpbase.OTPLocalizerEnglish import *
ToontownStart: Loading default gui sounds
ToontownStart: serverVersion:  tti-retro-dev
Preloading avatars...
Done preloading avatars.
{401000001: <toontown.distributed.ToontownDistrict.ToontownDistrict instance at 0x2A33B558>}
entering active SC menu
local
1
Reading DNA file... phase_4/dna/storage.dna
Reading DNA file... phase_3.5/dna/storage_interior.dna
Reading DNA file... phase_8/dna/storage_BR.dna
Reading DNA file... phase_8/dna/storage_BR_sz.dna
Reading DNA file... phase_8/dna/the_burrrgh_sz.dna
empty flat building with no walls
DNALandmarkBuilding sb11:toon_landmark_BR_pet_shop_DNARoot did not find **/*suit_building_origin
fisherman origin:  render/loader_data/theBurrrgh/fishing_pond_1/npc_fisherman_origin_0
Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
Traceback (most recent call last):
  File "<string>", line 4, in <module>
  File "<string>", line 4, in <module>
NameError: name 'frame' is not defined

frame rate: 90.9 fps|0.011d|1 avs||351|359||0x10de|0x11c8|409.1MB|444.3MB|8136.0MB|958|nt.2.6.2|3.601,3.601|4,8 cpus|OpenGL
Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
Traceback (most recent call last):
  File "<string>", line 4, in <module>
  File "<string>", line 4, in <module>
NameError: name 'frame' is not defined

Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
Traceback (most recent call last):
  File "<string>", line 4, in <module>
  File "<string>", line 4, in <module>
NameError: name 'frame' is not defined

Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
Traceback (most recent call last):
  File "<string>", line 4, in <module>
  File "<string>", line 8, in <module>
NameError: name 'screenMargin' is not defined

Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
frame rate: 83.7 fps|0.002d|1 avs||651|659||0x10de|0x11c8|409.5MB|444.9MB|8136.0MB|958|nt.2.6.2|3.601,3.601|4,8 cpus|OpenGL
Traceback (most recent call last):
  File "<string>", line 4, in <module>
  File "<string>", line 6
    x.setImage(""phase_5/maps/tt_t_gui_cmg_miniMap_frame.jpg"")
                       ^
SyntaxError: invalid syntax

Traceback (most recent call last):
  File "<string>", line 4, in <module>
  File "<string>", line 6
    x.setImage(""phase_5/maps/tt_t_gui_cmg_miniMap_frame.jpg"")
                       ^
SyntaxError: invalid syntax

Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
Traceback (most recent call last):
  File "<string>", line 4, in <module>
  File "<string>", line 6, in <module>
TypeError: setImage() takes exactly 1 argument (2 given)

Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
Traceback (most recent call last):
  File "<string>", line 4, in <module>
  File "<string>", line 6, in <module>
TypeError: setImage() takes exactly 1 argument (3 given)

Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
Traceback (most recent call last):
  File "<string>", line 4, in <module>
  File "<string>", line 6, in <module>
TypeError: setImage() takes exactly 1 argument (3 given)

Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
Traceback (most recent call last):
  File "<string>", line 4, in <module>
  File "<string>", line 6, in <module>
TypeError: setImage() takes exactly 1 argument (2 given)

Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
Warning: NodePath.remove() is deprecated.  Use remove_node() instead.
ignoring InputState-forward
Error in atexit._run_exitfuncs:
Traceback (most recent call last):
  File "D:\Usuario\Downloads\tts\TTISource\Panda3D-1.9.0\python\lib\atexit.py", line 24, in _run_exitfuncs
    func(*targs, **kargs)
  File "D:\Usuario\Downloads\tts\TTISource\Panda3D-1.9.0\python\lib\shutil.py", line 239, in rmtree
    onerror(os.listdir, path, sys.exc_info())
  File "D:\Usuario\Downloads\tts\TTISource\Panda3D-1.9.0\python\lib\shutil.py", line 237, in rmtree
    names = os.listdir(path)
WindowsError: [Error 3] O sistema não pode encontrar o caminho especificado: 'c:\\users\\oandre\\appdata\\local\\temp\\tmp1tjtzj/*.*'
Error in sys.exitfunc:
Traceback (most recent call last):
  File "D:\Usuario\Downloads\tts\TTISource\Panda3D-1.9.0\direct\showbase\ShowBase.py", line 513, in exitfunc
    self.oldexitfunc()
  File "D:\Usuario\Downloads\tts\TTISource\Panda3D-1.9.0\python\lib\atexit.py", line 24, in _run_exitfuncs
    func(*targs, **kargs)
  File "D:\Usuario\Downloads\tts\TTISource\Panda3D-1.9.0\python\lib\shutil.py", line 239, in rmtree
    onerror(os.listdir, path, sys.exc_info())
  File "D:\Usuario\Downloads\tts\TTISource\Panda3D-1.9.0\python\lib\shutil.py", line 237, in rmtree
    names = os.listdir(path)
WindowsError: [Error 3] O sistema não pode encontrar o caminho especificado: 'c:\\users\\oandre\\appdata\\local\\temp\\tmp1tjtzj/*.*'
